worked with CSS to fix inline alignment issues in top banner and image profile area

--- a/style.css
+++ b/style.css
@@ -28,9 +28,10 @@ h1, h2{
 */
 
 .topBanner {
-	background-color: black;
+	background-color: gray;
 	width: auto;
 	height: 70px;
+	/*
 	opacity: .5;
 	filter: alpha(opacity=50); /* For IE8 and earlier */;
 }
@@ -40,33 +41,51 @@ h1, h2{
 	height:36px;
 	margin: 5px;
 	padding: 15px;
+	vertical-align: middle;
 }
 
 .topBannerHeadline {
 	color: white;
-	font-size: 20px;
+	font-size: 21px;
 }
 
 .blackBand {
 	background-color: black;
 	width: auto;
 	height: 25px;
-
 }
 
 /* Profile Photo*/
+
+.flexItemA {
+	background: white;
+	margin-top: 0px;
+	margin-left: 20px;
+	margin-bottom: 10px;
+	padding-top:5px;
+	padding-left: 5px;
+	padding-bottom: 5px;
+	padding-right: 5px;
+	width: 75%;
+	height: auto;
+	text-align: left;
+	border-style: solid;
+	border-width: 2px;
+	border-color: black;
+}
 
 .profileImage {
 	border-radius: 50% 50% 50% 50%;
 	width: 80px;
 	height: 80px;
 	margin: 5px;
+	margin-right: 15px;
 	background-color: white;
+	vertical-align: middle;
 }
 
 .profileAuthor {
-	color: white;
-	vertical-align: middle;
+	color: blue;
 }
 
 
@@ -82,7 +101,7 @@ h1, h2{
 
 }
 
-/* Flexbox description blocks*/
+/* Description blocks*/
 
 
 .flexItem1 {
@@ -107,7 +126,7 @@ h1, h2{
 
 
 .imageERM {
-	padding: 5px;
+	padding: 10px;
 	width: auto;
 	height: auto;
 
